api client config et fix des types
