# backend/src/animal/animal.controller.ts
@@ -12,7 +12,9 @@ import {
 import { AnimalService } from './animal.service';
 import { CreateAnimalDto } from './dto/create-animal.dto';
 import { UpdateAnimalDto } from './dto/update-animal.dto';
-import { ApiTags, ApiOperation } from '@nestjs/swagger';
+import { ApiTags, ApiOperation, ApiOkResponse } from '@nestjs/swagger';
+import { Animal } from './entities/animal.entity';
+import { PaginatedAnimalResponseDto } from './dto/animal-response.dto';
 import { AnimalPaginationQueryDto } from './dto/animal-pagination-query.dto';
 
 @ApiTags('animals')
@@ -30,18 +32,21 @@ export class AnimalController {
   @ApiOperation({
     summary: 'Récupérer tous les animaux avec pagination et recherche',
   })
+  @ApiOkResponse({ type: PaginatedAnimalResponseDto })
   findAll(@Query() query: AnimalPaginationQueryDto) {
     return this.animalService.findAll(query);
   }
 
   @Get(':id')
   @ApiOperation({ summary: 'Récupérer un animal par son ID' })
+  @ApiOkResponse({ type: Animal })
   findOne(@Param('id', ParseIntPipe) id: number) {
     return this.animalService.findOne(id);
   }
 
   @Patch(':id')
   @ApiOperation({ summary: "Modifier les informations d'un animal" })
+  @ApiOkResponse({ type: Animal })
   update(
     @Param('id', ParseIntPipe) id: number,
     @Body() updateAnimalDto: UpdateAnimalDto,
@@ -51,6 +56,7 @@ export class AnimalController {
 
   @Delete(':id')
   @ApiOperation({ summary: 'Supprimer un animal' })
+  @ApiOkResponse()
   remove(@Param('id', ParseIntPipe) id: number) {
     return this.animalService.remove(id);
   }
